tarif.html is added

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
                 <a href="index.html">Ana Sayfa</a>
             </li>
             <li>
+                <a href="tarif.html">Iletisim</a>
+            </li>
+            <li>
                 <a href="about-us.html">Hakkımızda</a>
             </li>
             <li>
                 <a href="contact.html">Iletisim</a>
             </li>
+
         </ul>
     </nav>
 </header>
