--- a/about-us.html
+++ b/about-us.html
@@ -15,6 +15,9 @@
                 <a href="index.html">Ana Sayfa</a>
             </li>
             <li>
+                <a href="tarif.html">Iletisim</a>
+            </li>
+            <li>
                 <a href="about-us.html">Hakkımızda</a>
             </li>
             <li>
